<resources>
    <string name="app_name">mytimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat">repeat</string>
    <string name="input_times">input times</string>
    <string name="rest_time">Rest Time</string>
    <string name="timerValue_default">00</string>
    <string name="time_separators">:</string>
</resources>